style: fix elements alignment

--- a/front-end/mind_stack/src/app/pages/landing-page/landing-page.scss
+++ b/front-end/mind_stack/src/app/pages/landing-page/landing-page.scss
@@ -108,10 +108,6 @@
 .arrow-two {
   transform: rotate(200deg);
   transition: transform 0.3s ease;
-  
-  &:hover {
-    transform: rotate(200deg) scale(1.1);
-  }
 }
 
 .button-class {
